# config-genie

./: .gitignore  CHANGELOG.md  README.md  demo.py  devices.yaml  devices1.yaml  prompt_plan.md  pyproject.toml  run_tests.py  sample_inventory.yml  update_changelog.py
src/config_genie/: __init__.py  cli.py  connector.py  execution.py  interactive.py  inventory.py  logging.py  safety.py  templates.py  validation.py
tests/: __init__.py  test_cli.py  test_connector.py  test_integration.py  test_interactive.py  test_inventory.py  test_logging.py  test_templates.py  test_validation.py
